# Module-Database

./: .gitignore  README.md  build.gradle  common.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lebusishu/db/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lebusishu/db/: AppDao.kt  DBConfig.kt  DBConfig2.kt  MainActivity.kt
app/src/main/java/com/lebusishu/sqlite/: SqliteActivity.kt  StringUtil.kt
app/src/main/res/layout/: activity_main.xml  activity_sqlite.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lebusishu/db/: ExampleUnitTest.kt
compiler/: build.gradle
compiler/src/main/java/com/lebusishu/: TypeConfig.kt
compiler/src/main/java/com/lebusishu/annotations/: ModuleDBConfig.kt  ModuleDBVariable.kt
compiler/src/main/java/com/lebusishu/compiler/: ModuleProcessor.kt
database/: build.gradle
database/src/main/: AndroidManifest.xml
database/src/main/java/com/lebusishu/database/: Migrate.kt  ModuleDBVersionDao.kt  ModuleDatabaseHelper.kt
database/src/main/java/com/lebusishu/database/config/: DBConfigs.kt
database/src/main/java/com/lebusishu/database/dao/: BaseDao.kt  ModuleBaseDao.kt
database/src/main/java/com/lebusishu/database/utils/: ModuleReflectTool.kt
gradle/: bintray.gradle  push-jcenter.gradle
gradle/wrapper/: gradle-wrapper.properties
module-db/: build.gradle  gradle.properties
module-db-annotations/: build.gradle  gradle.properties
module-db-annotations/src/main/java/com/lebusishu/: TypeConfig.kt
module-db-annotations/src/main/java/com/lebusishu/annotations/: ModuleDBConfig.kt  ModuleDBVariable.kt
module-db-compiler/: build.gradle  gradle.properties
module-db-compiler/src/main/java/com/lebusishu/compiler/: ModuleProcessor.kt
module-db/src/main/java/com/lebusishu/database/: ModuleDB.kt  ModuleDBMigrationHelper.kt  ModuleDatabaseHelper.kt
module-db/src/main/java/com/lebusishu/database/config/: DBConfigs.kt
module-db/src/main/java/com/lebusishu/database/utils/: ModuleDBSqlUtils.kt  ModuleReflectTool.kt
module-sqlite/: build.gradle  gradle.properties
module-sqlite/src/main/: AndroidManifest.xml
module-sqlite/src/main/cpp/: CMakeLists.txt
module-sqlite/src/main/cpp/icu_compat/: CMakeLists.txt  icucompat.c  icuprototype.h
module-sqlite/src/main/cpp/sqlite/: CMakeLists.txt
module-sqlite/src/main/cpp/sqlite/extra/: wcicu_tokenizer.c  wcicu_tokenizer.h  wcicu_utils.h
module-sqlite/src/main/java/org/sqlite/database/sqlite/: SQLiteConnection.java  SQLiteConnectionPool.java  SQLiteDatabase.java  SQLiteDirectCursorDriver.java  SQLiteQueryBuilder.java
